--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 			<div id="success-msg" style="display:none;">
 				<div class="text-center">
-					<img id="fa-tut" width="870" height="490" src="/img/hbo_now.jpeg"/>
+					<img id="fa-tut" width="870" height="490" src="img/hbo_now.jpeg"/>
 				</div>
 			</div>
 
